# nn-reinforcement-agent

./: .gitignore  agent.py  main.py  pyproject.toml
bonus_section/: agent.py  main.py
flappy_bird/: agent.py  main.py
models/: model_8.h5
