[tool.poetry]
name = "nn-reinforcement-agent"
version = "0.1.0"
description = ""
authors = ["Joel Pires <joelpires70@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
