[tool.poetry]
name = "nn-reinforcement-agent"
version = "0.1.0"
description = ""
authors = ["Joel Pires <joelpires70@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
numpy = "^2.2.1"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
